# python-health-check-db

./: .env.example  TODO  alembic.ini  docker-compose.yml  main.py  pyproject.toml
api/: main.py
database/: __init__.py  mapping.py  metadata.py
healthcheck/: __init__.py  base_entities.py  entities.py  tables.py
migrations/: env.py
migrations/versions/: ac76057cc0d1_create_heartbeat_table_again.py
