[project]
name = "sqlalchemy-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.48",
]

[tool.setuptools.packages.find]
where = ["."]
